unpackaged/main/default/objects/Asset/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Account Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>