unpackaged/main/default/objects/Asset/fields/Country_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Issue__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Country of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>