unpackaged/main/default/objects/Asset/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Frequent Flyer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>