unpackaged/main/default/objects/Asset/fields/Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Important Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>