unpackaged/main/default/objects/Asset/fields/Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Account__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Name on Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>