unpackaged/main/default/objects/Asset/fields/Support_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Contact Number</label>
    <type>Phone</type>
</CustomField>