unpackaged/main/default/objects/Asset/recordTypes/Car_Rental_Account.recordType-meta.xml
<RecordType>
    <fullName>Car_Rental_Account</fullName>
    <active>true</active>
    <description>Membership Account for Car Rental/Service</description>
    <label>Car Rental Account</label>
</RecordType>