unpackaged/main/default/objects/Asset/recordTypes/Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card</fullName>
    <active>true</active>
    <description>Credit Card accounts.</description>
    <label>Credit Card</label>
</RecordType>