unpackaged/main/default/objects/Asset/recordTypes/General_Asset.recordType-meta.xml
<RecordType>
    <fullName>General_Asset</fullName>
    <active>true</active>
    <description>Assets and Memberships that don't fit into the other categories.</description>
    <label>General Asset</label>
</RecordType>