unpackaged/main/default/objects/Asset/recordTypes/Hotel_Account.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Account</fullName>
    <active>true</active>
    <description>Hotel and Accommodation membership account.</description>
    <label>Hotel Account</label>
</RecordType>