unpackaged/main/default/objects/Asset/recordTypes/Passport.recordType-meta.xml
<RecordType>
    <fullName>Passport</fullName>
    <active>true</active>
    <description>Passport Documents.</description>
    <label>Passport</label>
</RecordType>