unpackaged/main/default/objects/Asset/recordTypes/Restaurant_Account.recordType-meta.xml
<RecordType>
    <fullName>Restaurant_Account</fullName>
    <active>true</active>
    <description>Dining and Restaurant membership account.</description>
    <label>Restaurant Account</label>
</RecordType>